push get helpdesk data
